# edgerules

./: .geminiignore  .gitignore  .rustfmt.toml  AGENTS.md  AI-USE-ADDENDUM.md  CODE_QUALITY_REVIEW.md  Cargo.toml  ERROR_CODES_SPEC.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Justfile  README.md  REFERENCE.md  TEST_IMPROVEMENT_STORY.md  TODO.md  TODO_REPORT.md  package.json  workspace_stub.rs
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: coverage.yml
.run/: wasm.run.xml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core-tests/: Cargo.toml
crates/core-tests/src/: lib.rs
crates/core-tests/tests/: EXAMPLES-output.md  EXAMPLES.md  built_in_functions_validation_tests.rs  context_object_nesting_tests.rs  context_object_tests.rs  datetime_flexible_tests.rs  decision_service_linked_type_tests.rs  decision_service_portable_tests.rs  decision_service_rename_tests.rs  decision_service_tests.rs  edge_rules_tests.rs  edgerules_model_get_type_api.rs  equality_tests.rs  evaluation_common_tests.rs  evaluation_complex_tests.rs  evaluation_datetime_tests.rs  evaluation_default_values_tests.rs  evaluation_filter_tests.rs  evaluation_linking_errors_tests.rs  evaluation_list_tests.rs  evaluation_logic_tests.rs  evaluation_math_tests.rs  evaluation_overflow_tests.rs  evaluation_precision_tests.rs  evaluation_replace_tests.rs  evaluation_runtime_errors_tests.rs  evaluation_special_values_tests.rs  evaluation_string_tests.rs  evaluation_to_string_tests.rs  evaluation_types.rs  evaluation_user_functions_tests.rs  evaluation_user_types.rs  execution_context_nesting_tests.rs  file_tests.rs  generate-examples.rs  inline_functions_story_tests.rs  parser_edge_cases.rs  record_1.txt  test_assertions.rs  test_utils.rs  (+2 more)
crates/core-tests/tests/errors/: error1.txt  error2.txt
crates/core-tests/tests/invalid/: flat.txt
crates/core/src/: lib.rs  test_support.rs  tokenizer.rs  utils.rs  wasm.rs
crates/core/src/ast/: expression.rs  foreach.rs  ifthenelse.rs  mod.rs  selections.rs  sequence.rs  token.rs  user_function_call.rs  utils.rs  variable.rs
crates/core/src/ast/context/: !uml-functions.mermaid  context_object.rs  context_object_builder.rs  context_object_type.rs  context_resolver.rs  duplicate_name_error.rs  function_context.rs  metadata.rs  mod.rs
crates/core/src/ast/functions/: !uml-functions.md  function_date.rs  function_list.rs  function_numeric.rs  function_string.rs  function_types.rs
crates/core/src/ast/metaphors/: functions.rs  metaphor.rs  mod.rs
crates/core/src/ast/operators/: comparators.rs  logical_operators.rs  math_operators.rs  mod.rs
crates/core/src/link/: linker.rs  node_data.rs
crates/core/src/runtime/: decision_service.rs  edge_rules.rs  execution_context.rs  mod.rs
crates/core/src/tokenizer/: builder.rs  parser.rs  utils.rs
crates/core/src/typesystem/: errors.rs  mod.rs  types.rs  values.rs
crates/edge-js/: Cargo.toml
crates/edge-js/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: js_printer.rs  lib.rs  utils.rs  wasm_convert.rs  wasm_portable.rs
crates/wasm/src/conversion/: from_js.rs  mod.rs  to_js.rs  traits.rs
crates/wasm/src/portable/: controller.rs  error.rs  mod.rs  model.rs
crates/wasm/tests/: wasm_smoke.rs  wasm_tests.rs
doc/: AI_TEMPLATES.md  AST_MODEL_SPEC.md  DATETIME_SPEC.md  DATETIME_STORY.md  DECISION_SERVICE_STORY.md  EBNF.md  EBNF_DIAGRAMS.md  EBNF_SPEC.md  EDGE_RULES_API_SPEC.md  EDGE_RULES_API_STORY.md  ERRORS_IMPROVEMENT_STORY.md  ERRORS_STORY.md  ERROR_CODES_SPEC.md  FIRST_CLASS_USER_FUNCTIONS_STORY.md  FUTURE_IMPROVEMENTS_STORY.md  INLINE_FUNCTIONS_STORY.md  LINKING_CLEANUP.md  NAMESPACE_API.md  PRINT_STORY.md  RULESETS_STORY.md  SPECIAL_SPEC.md  SPECIAL_VALUES.md  TBC.md  TODO.md  TYPES_SPEC.md  TYPES_STORY.md  TYPE_SCHEMA.md  UNARY_TESTS_STORY.md  WORKSPACES_STORY.md
doc/stories/: DEFAULT_VALUES_STORY.md  ERRORS_IMPROVEMENT_STORY.md  IMPROVEMENTS_STORY.md  INLINE_FUNCTIONS_STORY.md  PARSER_REVIEW_SPEC.md  RUNTIME_EVAL_ERROR_REPLACEMENT.md  TEST_IMPROVEMENT_STORY.md
examples/js/: README.md  decision-service.mjs  ds-demo.mjs  node-demo.mjs  node-ds-demo.mjs  node-ds-performance.mjs  node-performance.mjs  utils.mjs
examples/web/: README.md  index.html
src/: cli.rs  lib.rs  runtime.rs  test_support.rs  tokenizer.rs  utils.rs  wasm.rs
src/ast/: annotations.rs  expression.rs  foreach.rs  ifthenelse.rs  mod.rs  selections.rs  sequence.rs  token.rs  user_function_call.rs  utils.rs  variable.rs
src/link/: linker.rs  mod.rs  node_data.rs
src/runtime/: decision_service.rs  edge_rules.rs  execution_context.rs  mod.rs  portable.rs
src/tokenizer/: builder.rs  parser.rs  utils.rs
src/typesystem/: errors.rs  mod.rs  types.rs  values.rs
src/wasm/: wasm_convert.rs  wasm_portable.rs
tests/: EXAMPLES-output.md  EXAMPLES.md  context_object_tests.rs  decision_service_portable_tests.rs  decision_service_tests.rs  edge_rules_tests.rs  evaluation_common_tests.rs  evaluation_complex_tests.rs  evaluation_datetime_tests.rs  evaluation_filter_tests.rs  evaluation_linking_errors_tests.rs  evaluation_list_tests.rs  evaluation_logic_tests.rs  evaluation_replace_tests.rs  evaluation_special_values_tests.rs  evaluation_string_tests.rs  evaluation_tests.rs  evaluation_to_string_tests.rs  evaluation_types.rs  evaluation_user_functions_tests.rs  evaluation_user_types.rs  file_tests.rs  generate-examples.rs  nested_1.txt  record_1.txt  test_utils.rs  tmp_calendar.txt  tmp_calendar_fix.txt  tmp_example.txt  tokenizer_tests.rs  utilities.rs
tests/errors/: error1.txt  error3.txt
tests/invalid/: dupl.txt  error.txt  flat.txt
tests/valid/: filters.txt
tests/wasm/: test-basic.mjs  test-datetime-strings.mjs  test-decision-service.mjs  test-default-values.mjs  test-functions.mjs  test-get-and-types.mjs  test-math.mjs  test-portable.mjs  test-rename.mjs  test-type-modification.mjs  test-types.mjs  (+1 more)
tests/wasm-js/: builtins.js  decision-service.mjs  print-basic.mjs
tests/wasm-performance/: performance-basic.mjs  performance-decision-service.mjs
(+29 files in other folders)
