[package]
name = "edge-rules"
version = "0.1.0"
authors = ["Rimvydas Bingelis <rimvydas.bin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A library for defining and evaluating business rules."

[lib]
name = "edge_rules"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "edgerules"
path = "src/cli.rs"

[[bin]]
name = "er"
path = "src/cli.rs"

[[bin]]
name = "edgerules-wasi"
path = "src/cli.rs"

[features]
default = ["native"]
# Native builds (CLI, tests) enable heavier optional functions
native = ["regex_functions", "base64_functions"]

# WASM builds keep heavy functions off by default
wasm = ["wasm-bindgen", "log/max_level_off"]
wasm_debug = ["wasm", "console_error_panic_hook"]

# Optional function groups
regex_functions = ["dep:regex"]
base64_functions = ["dep:base64"]

[dependencies]
log = { version = "0.4.28" }
console_error_panic_hook = { version = "0.1.7", optional = true }
time = { version = "0.3.43", features = ["macros", "formatting", "parsing"] }
phf = { version = "0.13.1", features = ["macros"] }
wasm-bindgen = { version = "0.2.100", optional = true }
dlmalloc = { version = "0.2", features = ["global"] }
regex = { version = "1.9.6", optional = true }
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
regex = "1.9.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "debuginfo"
