[package]
name = "edge-rules-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Workspace host crate (no runtime code)."

[lib]
path = "workspace_stub.rs"

[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/wasm",
    "crates/core-tests",
    "crates/edge-js",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Rimvydas Bingelis <rimvydas.bin@gmail.com>"]
description = "A lightweight, embeddable rules engine for edge environments, supporting a custom DSL for defining rules and conditions."

[workspace.dependencies]
log = { version = "0.4.28" }
console_error_panic_hook = { version = "0.1.7" }
time = { version = "0.3.43", features = ["macros", "formatting", "parsing"] }
phf = { version = "0.13.1", features = ["macros"] }
wasm-bindgen = { version = "0.2.100" }
js-sys = { version = "0.3.81" }
dlmalloc = { version = "0.2", features = ["global"] }
regex = { version = "1.9.6" }
base64 = { version = "0.22.1" }
env_logger = "0.11.8"
wasm-bindgen-test = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "debuginfo"
