[package]
name = "edge-rules-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for EdgeRules."

[dependencies]
edge-rules = { path = "../core", package = "edge-rules" }

[[bin]]
name = "edgerules"
path = "src/main.rs"

[[bin]]
name = "er"
path = "src/main.rs"

[[bin]]
name = "edgerules-wasi"
path = "src/main.rs"
