[package]
name = "edge-js"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "JavaScript printer for EdgeRules AST and runtime values."

[features]
default = ["native"]
native = ["edge-rules/native", "edge-rules/mutable_decision_service"]
wasm = ["edge-rules/wasm"]
mutable_decision_service = ["edge-rules/mutable_decision_service"]

[dependencies]
edge-rules = { path = "../core", default-features = false }
