[package]
name = "edge-rules-wasi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM bindings for EdgeRules (web/node/WASI)."

[lib]
name = "edge_rules_wasi"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
mutable_decision_service = ["edge-rules/mutable_decision_service"]
wasm = [
    "edge-rules/wasm",
    "mutable_decision_service",
    "log/max_level_off",
]
wasm_debug = ["wasm", "console_error_panic_hook", "edge-rules/wasm_debug"]
regex_functions = ["edge-rules/regex_functions"]
base64_functions = ["edge-rules/base64_functions"]

[dependencies]
edge-rules = { path = "../core", default-features = false, features = ["wasm"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
log = { workspace = true }
time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
